--- a/styles/global.css
+++ b/styles/global.css
@@ -8,6 +8,9 @@ body {
   min-width: 1100px;
   margin: 0;
   font-family: Raleway, sans-serif;
+  padding: 92px 0 90px;
+  display: flex;
+  flex-direction: column;  
 }
 
 h1,
