--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,394 @@
-/* место для вашего кода */
+.body__header {
+  margin: 0 auto 92px;
+}
+
+.body__footer {
+  margin: 180px auto 0;
+}
+
+.address {  
+  font-size: 18px;  
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.35; 
+  max-width: 240px;  
+}
+
+.address__communication {
+  text-decoration: none;
+  border-bottom: 1px solid black;
+}
+
+.overlay {
+  background-color: rgba(0, 0, 0, .6);  
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+}
+
+.no-letter-spacing {
+  letter-spacing: 30px;
+}
+
+.letter-spacing-extended {
+  letter-spacing: 60px;
+}
+
+.header {
+  width: 93.06%;
+  max-width: 1340px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.header__links-list {
+  display: flex;  
+  gap: 32px;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 1.17;
+  border-width: 1px;
+}
+
+.header__links-list-item {
+  list-style: circle;
+}
+
+.header__links-list-item_no-bullit {
+  list-style: none;
+}
+
+.header__link {
+  text-decoration: underline;
+}
+
+.header__link:hover {
+  cursor: pointer;
+}
+
+.header__link_active {
+  text-decoration: none;  
+}
+
+.header__link_active:hover {  
+  cursor: default;
+}
+
+.header__logo {  
+  display: block;
+  margin-bottom: 4px;    
+  width: 148px;
+  height: 105px;
+
+}
+
+.header__logo-image {
+  object-fit: contain;
+  object-position: center;     
+  height: 100%;
+}
+
+.header__address {
+  margin-left: 146px;
+}
+
+.main__lots {
+  margin: 180px 50px 0;
+}
+
+.main__about {
+  margin: 181px 50px 0;
+}
+
+.cover {
+  background-image: url('../images/cover.jpg');
+  background-position: center;
+  background-size: cover;
+  color: white;
+  padding: 165px 50px 50px;
+  position: relative;
+}
+
+.cover__title {
+  font-size: 100px;
+  font-weight: 700px;
+  line-height: 1.15;
+  text-transform: uppercase;
+  position: relative;
+  z-index: 2;
+}
+
+.cover__description {
+  margin-top: 147px;
+  padding-left: 372px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  text-transform: uppercase;
+  position: relative;
+  z-index: 2;
+}
+
+.cover__description-text {  
+  text-align: center;  
+  font-size: 22px;  
+  font-weight: 400;
+  line-height: 1.27273;   
+  word-spacing: 17.9px;
+}
+
+.aligned-text {
+  display: block;
+}
+
+.aligned-text_center {
+  text-align: center;  
+  line-height: 1;
+}
+
+.aligned-text_right {
+  text-align: right;
+  line-height: 1;
+}
+
+.bet-button {
+  display: flex;
+  width: 257px;
+  height: 52px;
+  border: 1px solid #FFF;  
+     
+}
+
+.bet-button:hover {
+  cursor: pointer;
+}
+
+.bet-button__text {
+  margin: auto;
+  text-align: center;  
+  font-size: 22px;  
+  font-weight: 400;
+  line-height: 1.18; 
+}
+
+.lots {  
+  display: flex;
+  flex-direction: column;
+  gap: 27px;
+}
+
+.lots__heading {
+  margin-left: 40px;  
+  font-size: 40px;  
+  font-weight: 700;
+  line-height: 1.175;
+  text-transform: uppercase;
+}
+
+.lots__card-list {
+  display: flex;
+  gap: 25px;
+  flex-wrap: wrap; 
+  list-style: none;   
+}
+
+.lots__card-list-item {
+  min-height: 450px;
+  flex-basis: 430px;
+  flex-grow: 1;
+}
+
+.card-link {
+  display: block;    
+  height: 100%;
+  text-decoration: none;    
+}
+
+.card-link:hover {
+  cursor: pointer;
+}
+
+.card {    
+  height: 100%;  
+  display: flex;
+  flex-direction: column;
+  padding: 50px 40px;
+  justify-content: space-between;
+  color: white;
+  position: relative;
+}
+
+.card_type_film {
+  background-image: url('../images/card-lot-01.jpg');
+  background-size: cover;
+  background-position: center;
+}
+
+.card_type_book {
+  background-image: url('../images/card-lot-02.jpg');
+  background-size: cover;
+  background-position: center;
+}
+
+.card_type_picture {
+  background-image: url('../images/card-lot-03.jpg');
+  background-size: cover;
+  background-position: center;
+}
+
+.card__title {  
+  font-size: 22px;  
+  font-weight: 700;
+  line-height: 1.20;
+  text-decoration: underline;
+  text-transform: uppercase;
+  z-index: 2;  
+}
+
+.card__text {  
+  font-size: 20px;  
+  font-weight: 400;
+  line-height: 1.20; 
+  z-index: 2;
+}
+
+.lots__look-more-link { 
+  margin: 3px 0 1px 40px;  
+  font-size: 20px;  
+  font-weight: 400;
+  line-height: 1.15;
+  align-self: flex-start;
+  border-bottom: 1px solid black;
+}
+
+.lots__look-more-link:hover {
+  cursor: pointer;
+}
+
+.about {
+  display: flex;  
+  align-items: flex-start;
+  gap: 25px;
+}
+
+.about__logo-column {
+  flex-basis: 430px;
+  flex-grow: 1; 
+  flex-shrink: 0; 
+}
+
+.about__logo {
+  width: 240px; 
+  height: 240px;
+  background: black;
+  border-radius: 50%;
+  margin: auto;
+  display: flex;
+}
+
+.about__logo-image {
+  margin: auto;
+  width: 148px;
+  height: 114px;
+  object-fit: cover;
+  object-position: center;
+  color: white;
+}
+
+.about__column {
+  flex-basis: 885px;
+  flex-grow: 2;
+  flex-shrink: 1;
+  padding-top: 100px;
+}
+
+.about__title {
+  padding-bottom: 100px;  
+  font-size: 40px;  
+  font-weight: 700;
+  line-height: 1.175;
+  text-transform: uppercase;
+}
+
+.about__text {
+  padding-bottom: 25px;  
+  font-size: 20px;  
+  font-weight: 400;
+  line-height: 1.15;
+}
+
+.about__text_last {
+  padding-bottom: 0;
+}
+
+.footer {
+  width: 93.06%;
+  max-width: 1340px;
+  display: flex;
+  justify-content: space-between;  
+  align-items: flex-start;
+}
+
+.footer__menu-list {
+  display: flex;  
+  flex-direction: column;
+  align-items: center;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 1.17;  
+}
+
+.footer__menu-list-item {
+  list-style: none;
+}
+
+.footer__menu-link {
+  text-decoration: underline;
+}
+
+.footer__menu-link:hover {
+  cursor: pointer;
+}
+
+.footer__menu-link_active {
+  text-decoration: none;  
+}
+
+.footer__menu-link_active:hover {  
+  cursor: default;
+}
+
+.footer__social-list {
+  display: flex;
+  justify-content: space-between;
+  width: 240px;
+  list-style: none;
+}
+
+.footer__social-list-item {
+  height: 48px;
+}
+
+.footer__social-link {
+  text-decoration: none;
+}
+
+.footer__social-link:hover {
+  cursor: pointer;
+}
+
+.footer__social-icon {
+  object-fit: cover;
+  height: 100%;
+}
+
+
+
+
+
+
+
