--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -3,7 +3,7 @@
   src:
     url(./Raleway-Regular.woff2) format('woff2'),
     url(./Raleway-Regular.woff) format('woff');
-  font-weight: 400;
+  font-weight: normal;
   font-display: swap;
 }
 
@@ -12,6 +12,6 @@
   src:
     url(./Raleway-Bold.woff2) format('woff2'),
     url(./Raleway-Bold.woff) format('woff');
-  font-weight: 700;
+  font-weight: bold;
   font-display: swap;
 }
