--- a/styles/style.css
+++ b/styles/style.css
@@ -30,7 +30,7 @@
 }
 
 .no-letter-spacing {
-  letter-spacing: 30px;
+  letter-spacing: 0;
 }
 
 .letter-spacing-extended {
@@ -51,7 +51,7 @@
   gap: 32px;
   font-size: 18px;
   font-weight: 400;
-  line-height: 1.17;
+  line-height: normal;
   border-width: 1px;
 }
 
@@ -106,6 +106,7 @@
 
 .cover {
   background-image: url('../images/cover.jpg');
+  background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
   color: white;
@@ -115,9 +116,10 @@
 
 .cover__title {
   font-size: 100px;
-  font-weight: 700px;
-  line-height: 1.15;
+  font-weight: 700;
+  line-height: 1;
   text-transform: uppercase;
+  letter-spacing: 30px;
   position: relative;
   z-index: 2;
 }
@@ -145,37 +147,37 @@
   display: block;  
 }
 
+.aligned-text_specific-line-height {
+  line-height: 1.15;
+}
+
 .aligned-text_paddings {
   padding: 20px 0;
 }
 
 .aligned-text_center {
-  text-align: center;  
-  line-height: 1;
+  text-align: center;    
 }
 
-.aligned-text_right {
-  text-align: right;
-  line-height: 1;
+.aligned-text_right {  
+  text-align: right;  
 }
 
 .bet-button {
-  display: flex;
+  background-color: transparent;
   width: 257px;
   height: 52px;
-  border: 1px solid #FFF;       
+  border: 1px solid #FFF;  
+  text-align: center;  
+  font-size: 22px;  
+  font-weight: 400;
+  line-height: normal;
+  color: #FFF;     
+  text-transform: uppercase;
 }
 
 .bet-button:hover {
   cursor: pointer;
-}
-
-.bet-button__text {
-  margin: auto;
-  text-align: center;  
-  font-size: 22px;  
-  font-weight: 400;
-  line-height: 1.18; 
 }
 
 .lots {  
@@ -188,7 +190,7 @@
   margin-left: 40px;  
   font-size: 40px;  
   font-weight: 700;
-  line-height: 1.175;
+  line-height: normal;
   text-transform: uppercase;
 }
 
@@ -223,24 +225,20 @@
   justify-content: space-between;
   color: white;
   position: relative;
+  background-size: cover;
+  background-position: center;
 }
 
 .card_type_film {
-  background-image: url('../images/card-lot-01.jpg');
-  background-size: cover;
-  background-position: center;
+  background-image: url('../images/card-lot-01.jpg');  
 }
 
 .card_type_book {
-  background-image: url('../images/card-lot-02.jpg');
-  background-size: cover;
-  background-position: center;
+  background-image: url('../images/card-lot-02.jpg');  
 }
 
 .card_type_picture {
-  background-image: url('../images/card-lot-03.jpg');
-  background-size: cover;
-  background-position: center;
+  background-image: url('../images/card-lot-03.jpg');  
 }
 
 .card__title {  
@@ -263,7 +261,7 @@
   margin: 3px 0 1px 40px;  
   font-size: 20px;  
   font-weight: 400;
-  line-height: 1.15;
+  line-height: normal;
   align-self: flex-start;
   border-bottom: 1px solid black;
 }
@@ -313,7 +311,7 @@
   padding-bottom: 100px;  
   font-size: 40px;  
   font-weight: 700;
-  line-height: 1.175;
+  line-height: normal;
   text-transform: uppercase;
 }
 
@@ -321,7 +319,7 @@
   padding-bottom: 25px;  
   font-size: 20px;  
   font-weight: 400;
-  line-height: 1.15;
+  line-height: normal;
 }
 
 .about__text_last {
@@ -343,7 +341,7 @@
   align-items: center;
   font-size: 18px;
   font-weight: 400;
-  line-height: 1.17;  
+  line-height: normal;  
 }
 
 .footer__menu-list-item {
@@ -368,17 +366,15 @@
 
 .footer__social-list {
   display: flex;
-  justify-content: space-between;
-  width: 240px;
+  gap: 48px;
+  max-width: 240px;
   list-style: none;
-}
-
-.footer__social-list-item {
-  height: 48px;
 }
 
 .footer__social-link {
   text-decoration: none;
+  display: block;
+  width: 48px;    
 }
 
 .footer__social-link:hover {
@@ -386,8 +382,8 @@
 }
 
 .footer__social-icon {
-  object-fit: cover;
-  height: 100%;
+  object-fit: cover; 
+  display: block;  
 }
 
 
